ejercicios resueltos clase4_parte2
